--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,26 @@
 <body>
   <app-root></app-root>
 </body>
+
+<script>
+  var isOpen = false;
+  function openNav() {
+    debugger;
+    isOpen = !isOpen
+    if (isOpen){
+    document.getElementById("mySidebar").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+    }
+    else 
+    {
+      document.getElementById("mySidebar").style.width = "0";
+      document.getElementById("main").style.marginLeft= "0";
+    }
+  }
+  
+  function closeNav() {
+    document.getElementById("mySidebar").style.width = "0";
+    document.getElementById("main").style.marginLeft= "0";
+  }
+  </script>
 </html>
